--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,10 @@ jobs:
         run: node env.js
 
       - name: Build Angular App
-        run: npm run build --prod
+        run: npx ng build --configuration=production 
 
       - name: Run Scully to Generate Static Site
-        run: npm run scully
+        run: npx scully --project quick-notes
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
