--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,15 +5,32 @@ on:
     branches:
       - main  # You can replace 'main' with the branch you want to deploy from
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+# Default to bash
+defaults:
+  run:
+    shell: bash
+
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: '20'  # Use the appropriate Node.js version
 
@@ -21,6 +38,8 @@ jobs:
         run: npm install
 
       - name: Replace Env values
+        env:
+          FIREBASE_DETAILS: ${{ vars.FIREBASE_DETAILS }}
         run: node env.js
 
       - name: Build Angular App
@@ -28,9 +47,25 @@ jobs:
 
       - name: Run Scully to Generate Static Site
         run: npx scully --project quick-notes
-
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+         
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          branch: gh-pages  # Target branch for GitHub Pages
-          folder: dist/static  # Output folder for Scully (can be different if configured)
+          path: ./dist/static
+
+      # - name: Deploy to GitHub Pages
+      #   uses: JamesIves/github-pages-deploy-action@v4
+      #   with:
+      #     branch: main  # Target branch for GitHub Pages
+      #     folder: dist/static  # Output folder for Scully (can be different if configured)
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
